--- a/package.json
+++ b/package.json
@@ -6,19 +6,31 @@
   "author": "damilola dolor <damiloladolor@gmail.com>",
   "license": "MIT",
   "dependencies": {
+    "@prisma/client": "5.2.0",
+    "bcrypt": "^5.1.1",
+    "body-parser": "^1.20.2",
     "dotenv": "^16.3.1",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "joi": "^17.10.1",
+    "morgan": "^1.10.0"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
+    "@types/body-parser": "^1.19.2",
     "@types/express": "^4.17.17",
+    "@types/hapi__joi": "^17.1.10",
+    "@types/morgan": "^1.9.5",
     "@types/node": "^20.5.9",
     "concurrently": "^8.2.1",
     "nodemon": "^3.0.1",
+    "prisma": "^5.2.0",
+    "ts-node": "^10.9.1",
     "typescript": "^5.2.2"
   },
   "scripts": {
     "build": "npx tsc",
     "start": "node dist/main.js",
-    "dev": "concurrently \"npx tsc --watch\" \"nodemon -q dist/main.js\""
+    "dev": "concurrently \"npx tsc --watch\" \"nodemon -q dist/main.js\"",
+    "migrate": "npx prisma migrate dev --name"
   }
 }
