--- a/package.json
+++ b/package.json
@@ -12,15 +12,21 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "joi": "^17.10.1",
-    "morgan": "^1.10.0"
+    "jsonwebtoken": "^9.0.2",
+    "morgan": "^1.10.0",
+    "passport": "^0.6.0",
+    "passport-jwt": "^4.0.1"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
     "@types/body-parser": "^1.19.2",
     "@types/express": "^4.17.17",
     "@types/hapi__joi": "^17.1.10",
+    "@types/jsonwebtoken": "^9.0.2",
     "@types/morgan": "^1.9.5",
     "@types/node": "^20.5.9",
+    "@types/passport": "^1.0.12",
+    "@types/passport-jwt": "^3.0.9",
     "concurrently": "^8.2.1",
     "nodemon": "^3.0.1",
     "prisma": "^5.2.0",
